--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -6,12 +6,64 @@
     note = {Accessed: 2019-06-19}
 }
 
-@misc{Blain,
-	title = {60 Seconds with Ross Sparkman, head of strategic workforce planning, Facebook},
-    howpublished = {\url{https://www.humanresourcesonline.net/60-seconds-with-ross-sparkman-head-of-strategic-workforce-planning-facebook/}},
-	author = {{Blain}, R.},
-	year = {2019},
-    month = {March},
-    day = {25}
-    note = {Accessed: 2019-06-19}
+@article{virtanen2009long,
+  title={Long working hours and cognitive function: the Whitehall II Study},
+  author={Virtanen, Marianna and Singh-Manoux, Archana and Ferrie, Jane E and Gimeno, David and Marmot, Michael G and Elovainio, Marko and Jokela, Markus and Vahtera, Jussi and Kivim{\"a}ki, Mika},
+  journal={American Journal of Epidemiology},
+  volume={169},
+  number={5},
+  pages={596--605},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{sparks1997effects,
+  title={The effects of hours of work on health: a meta-analytic review},
+  author={Sparks, Kate and Cooper, Cary and Fried, Yitzhak and Shirom, Arie},
+  journal={Journal of occupational and organizational psychology},
+  volume={70},
+  number={4},
+  pages={391--408},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+@article{virtanen2011long,
+  title={Long working hours and symptoms of anxiety and depression: a 5-year follow-up of the Whitehall II study},
+  author={Virtanen, Marianna and Ferrie, Jane E and Singh-Manoux, Archana and Shipley, Martin J and Stansfeld, Stephen A and Marmot, Michael G and Ahola, Kirsi and Vahtera, Jussi and Kivim{\"a}ki, Mika},
+  journal={Psychological medicine},
+  volume={41},
+  number={12},
+  pages={2485--2494},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
+@book{schweyer2010talent,
+  title={Talent management systems: Best practices in technology solutions for recruitment, retention and workforce planning},
+  author={Schweyer, Allan},
+  year={2010},
+  publisher={John Wiley \& Sons}
+}
+
+@article{de2015workforce,
+  title={Workforce planning incorporating skills: State of the art},
+  author={De Bruecker, Philippe and Van den Bergh, Jorne and Beli{\"e}n, Jeroen and Demeulemeester, Erik},
+  journal={European Journal of Operational Research},
+  volume={243},
+  number={1},
+  pages={1--16},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{pynes2004implementation,
+  title={The implementation of workforce and succession planning in the public sector},
+  author={Pynes, Joan E},
+  journal={Public Personnel Management},
+  volume={33},
+  number={4},
+  pages={389--404},
+  year={2004},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
